<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
<<<<<<< HEAD
    android:background="@drawable/login_bg"
=======
    android:background="@drawable/bg_login"
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
<<<<<<< HEAD
        android:background="@drawable/login_bg_logo" />
=======
        android:background="@drawable/bg_login_logo" />
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
<<<<<<< HEAD
        android:text="@string/login_slogan_text"
=======
        android:text="@string/text_logo_title"
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="20dp"
<<<<<<< HEAD
            android:background="@drawable/login_username" />
=======
            android:background="@drawable/ic_login_username" />
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:hint="@string/login_username_placeholder"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="80666444"
            android:paddingRight="45dp"
            android:inputType="textVisiblePassword"
            android:textSize="20sp"
            android:singleLine="true"
=======
            android:hint="@string/text_input_password"
            android:inputType="textVisiblePassword"
            android:textCursorDrawable="@null"
            android:gravity="center"
            android:paddingRight="45dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="20dp"
<<<<<<< HEAD
            android:background="@drawable/login_password" />
=======
            android:background="@drawable/ic_login_password" />
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:hint="@string/login_password_placeholder"
            android:inputType="textPassword"
            android:text="123456"
=======
            android:hint="@string/text_input_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9
            android:gravity="center"
            android:paddingRight="45dp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#FFFFFF" />

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:text="@string/login_submit"
        android:textColor="#FFFFFF"
        android:textSize="20dip"
        android:onClick="actionSubmit"
        android:background="@drawable/btn_style" />
</LinearLayout>
=======
        android:text="@string/text_login"
        android:textColor="#FFFFFF"
        android:textSize="20dip"
        android:onClick="login"
        android:background="@drawable/btn_style" />
</LinearLayout>
>>>>>>> fa4ffd90cd3f6a0db797ede37e42becda41540e9
